# brix

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  aktuell.md  docker-compose.yml  pyproject.toml  requirements.txt  seed-data.json
.claude/: settings.json
docs/: channel-plugin-research.md  cookbook.md  decisions.md  frontend-ux-entwurf-lisa.md  integration-learnings.md  research-claude-code-skills.md  research-mcp-sdk.md  review-brix-v2-alex-flowstein.md  review-packaging-bruckner.md  review-spec-alex.md  review-strategy-alex.md  review-v2-bruckner-secops.md  review-v2-lisa-dx.md  review-v3-agents.md
helpers/: analyze_unknown_sonstiges.py  buddy_classify.py  buddy_eltern_report.py  buddy_extract_xlsx.py  buddy_import_eltern_process.py  buddy_intake_onedrive.py  buddy_intake_process.py  buddy_intake_report.py  buddy_onedrive_report.py  buddy_parse_bank.py  buddy_parse_kontoauszug.py  buddy_prepare_mails.py  buddy_prepare_onedrive.py  convert_files.py  convert_report.py  debug_id.py  debug_raw.py  extract_attachment_urls.py  filter_mails_by_keywords.py  flatten_attachments.py  inline_extract.py  list_files.py  save_attachment.py  save_markdown.py  structured_save.py  summary_report.py
pipelines/: convert-folder.yaml  download-attachments-broad.yaml  download-attachments.yaml  test-fetch.yaml
tests/: conftest.py  download-attachments.test.yaml  helpers.py  test_advanced_flow.py  test_agent_state.py  test_alerting.py  test_api.py  test_backup_restore.py  test_backward_compat.py  test_base_runner.py  test_brick_composition.py  test_brick_first_engine.py  test_brick_registry.py  test_brick_schema.py  test_bugfix_feedback.py  test_bundle.py  test_cache.py  test_cli.py  test_config.py  test_connections.py  test_context.py  test_credential_store.py  test_crud_complete.py  test_custom_bricks.py  test_dag_execution.py  test_db.py  (+103 more)
(+141 files in other folders)
